# USER_SERVICE_RUST

./: .env  Cargo.toml  README.md  diesel.toml
migrations/2024-10-16-002645_create_users/: up.sql
src/: main.rs  schema.rs
src/config/: mod.rs
src/controller/: dto.rs  mod.rs
src/models/: mod.rs
src/service/: auth.rs  mod.rs
