[package]
name = "user_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
jsonwebtoken = "9.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls"] }
uuid = { version = "1.1", features = ["v4", "serde"] }
dotenv = "0.15"
env_logger = "0.11.5"
log = "0.4"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde", "clock", "std"] }
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.0.0"
lazy_static = "1.5.0"
